[gd_scene load_steps=4 format=3 uid="uid://7s8cr7vkdrvw"]

[ext_resource type="Script" uid="uid://cpl2jqb3f1kog" path="res://player/tools/no_drain_stamina_item.gd" id="1_uvev3"]
[ext_resource type="PackedScene" uid="uid://bsdnlrmeexedf" path="res://player/tools/reload_icon.tscn" id="2_5vkhj"]
[ext_resource type="Texture2D" uid="uid://ckbs1kq8gc7mg" path="res://UI/icons/reload_icons/blank.png" id="3_5b37p"]

[node name="NoDrainStaminaItem" type="Node2D"]
script = ExtResource("1_uvev3")

[node name="NoDrainStaminaItemTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="NoDrnStmnCooldown" type="Timer" parent="."]
wait_time = 17.5
one_shot = true

[node name="reload_icon" parent="." instance=ExtResource("2_5vkhj")]
position = Vector2(-525, 230)

[node name="ReloadIconExample-export" parent="reload_icon" index="0"]
texture = ExtResource("3_5b37p")

[connection signal="item_used" from="." to="reload_icon" method="on_item_used"]
[connection signal="timeout" from="NoDrainStaminaItemTimer" to="." method="_on_no_drain_stamina_item_timer_timeout"]
[connection signal="timeout" from="NoDrnStmnCooldown" to="." method="_on_no_drn_stmn_cooldown_timeout"]

[editable path="reload_icon"]
